# jbigkit

./: ANNOUNCE  CHANGES  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.original  TODO  configure.ac
examples/: README  ccitt1.bie  ccitt3.bie  ccitt7.bie
libjbig/: Makefile  jbig.c  jbig.doc  jbig.h  jbig.txt  jbig85.c  jbig85.h  jbig85.txt  jbig_ar.c  jbig_ar.h  jbig_tab.c  jbig_tables.c  test_codec.c  tstcodec.c  tstcodec85.c  tstjoint.c
libjbig/po/: README.txt  de.po  pl.po  ru.po
pbmtools/: Makefile  jbgtopbm.1  jbgtopbm.c  jbgtopbm85.c  jbigtopbm.1  jbigtopbm.c  pbmtojbg.1  pbmtojbg.c  pbmtojbg85.c  pbmtojbig.1  pbmtojbig.c
